--- a/.github/workflows/publish_app_release.yml
+++ b/.github/workflows/publish_app_release.yml
@@ -9,61 +9,17 @@ on:
         type: string
 
 jobs:
-  build-android:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download Android keystore
-        id: android_keystore
-        uses: timheuer/base64-to-file@v1.2
-        with:
-          fileName: keystore.jks
-          encodedString: ${{ secrets.KEYSTORE_BASE64 }}
-      - name: Create key.properties
-        run: |
-          echo "storeFile=${{ steps.android_keystore.outputs.filePath }}" > simple_live_app/android/key.properties
-          echo "storePassword=${{ secrets.STORE_PASSWORD }}" >> simple_live_app/android/key.properties
-          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> simple_live_app/android/key.properties
-          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> simple_live_app/android/key.properties
-
-      - uses: actions/setup-java@v4
-        with:
-          distribution: "zulu"
-          java-version: "17"
-          cache: "gradle"
-
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: "3.38.x"
-          cache: true
-
-      - name: Restore packages
-        run: |
-          cd simple_live_app
-          flutter pub get
-
-      - name: Build arm64-v8a APK
-        run: |
-          cd simple_live_app
-          flutter build apk --release --target-platform android-arm64
-
-      - name: Upload APK to Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: android-apk-${{ github.event.inputs.version }}
-          path: simple_live_app/build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
-
   build-windows:
     runs-on: windows-latest
     permissions:
       contents: write
     steps:
+      # 签出代码
       - uses: actions/checkout@v4
+        with:
+          ref: master
 
+      # 设置Flutter环境
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -78,52 +34,31 @@ jobs:
           cd simple_live_app
           flutter pub get
 
+      # 设置flutter_distributor环境
       - name: Install flutter_distributor
         run: dart pub global activate flutter_distributor
 
-      - name: Build Windows
+      # build Windows ZIP
+      - name: Build Windows ZIP
         run: |
           cd simple_live_app
           flutter_distributor package --platform windows --targets zip --skip-clean
 
-      - name: Upload Windows APP to Artifacts
+      # 上传Windows至Artifacts
+      - name: Upload Windows ZIP to Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: windows-zip-${{ github.event.inputs.version }}
+          name: windows-zip
           path: simple_live_app/build/dist/*/*.zip
 
-  create-release:
-    needs: [build-android, build-windows]
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - name: Download Android APK
-        uses: actions/download-artifact@v4
-        with:
-          name: android-apk-${{ github.event.inputs.version }}
-          path: ./artifacts/android
-
-      - name: Download Windows ZIP
-        uses: actions/download-artifact@v4
-        with:
-          name: windows-zip-${{ github.event.inputs.version }}
-          path: ./artifacts/windows
-
-      - name: Create Release
+      # 上传至Release
+      - name: Create and Upload Release
         uses: softprops/action-gh-release@v1
         with:
           name: Release ${{ github.event.inputs.version }}
           tag_name: ${{ github.event.inputs.version }}
-          body: |
-            ${{ github.event.inputs.changelog }}
-
-            **构建包含：**
-            - Android APK (arm64-v8a)
-            - Windows 桌面版
-          draft: false
-          prerelease: false
+          generate_release_notes: false
           token: ${{ secrets.GITHUB_TOKEN }}
-          files: |
-            ./artifacts/android/*
-            ./artifacts/windows/*
+          files: simple_live_app/build/dist/*/*.zip
+
+      - run: echo "🍏 Windows job's status is ${{ job.status }}."
